--- a/DesignerRHN/DesignerRHN-war/web/ReportesBancos.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/ReportesBancos.xhtml
@@ -22,11 +22,19 @@
                         <p:separator id="separatorBtnsInferiores"  style="vertical-align: central;position: absolute;height: 25px;width: 3px;top: 515px;left: 155px "/>  
                         <p:commandButton style="position: absolute; left: 10px; top: 518px; " id="ENVIOCORREO" value="#{msg['envioporcorreo']}"   process="@this" oncomplete="EnvioCorreoDialogo.show()" actionListener="#{controlReportesBancos.defaultPropiedadesParametrosReporte()}"/>
 
-                        <p:dialog id="confirmarGuardar" header="" widgetVar="confirmarGuardar"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px" closable="false">  
+                        <p:dialog id="confirmarGuardar" header="#{msg['atencion']}" widgetVar="confirmarGuardar"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px" closable="false">  
                             <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
                             <h:outputText value="#{msg['cambiosRealizados']}" style="position: absolute; left: 100px; top: 20px; width: 300px;" />
                             <p:commandButton value="#{msg['si']}" onclick="confirmarGuardar.hide();" action="nomina" actionListener="#{controlReportesBancos.guardarYSalir()}" style="position: absolute; top: 60px; left: 215px" process="@this" />
                             <p:commandButton value="#{msg['no']}" onclick="confirmarGuardar.hide();" action="nomina" actionListener="#{controlReportesBancos.cancelarYSalir()}" style="position: absolute; top: 60px; left: 255px" process="@this" />
+                            <p:commandButton value="#{msg['cancelar']}" onclick="confirmarGuardar.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
+                        </p:dialog>
+
+                        <p:dialog id="confirmarGuardarSinSalida" header="#{msg['atencion']}" widgetVar="confirmarGuardarSinSalida"  resizable="false" draggable="false" modal="true" height="95" width="400px" style="font-size: 12px" closable="false">  
+                            <h:graphicImage value="Imagenes/alerta.jpg" width="70" height="50" style="position: absolute; left: 30px; top: 10px;"  />
+                            <h:outputText value="#{msg['cambiosRealizados']}" style="position: absolute; left: 100px; top: 20px; width: 300px;" />
+                            <p:commandButton value="#{msg['si']}" onclick="confirmarGuardar.hide();"  actionListener="#{controlReportesBancos.guardarCambios()}" style="position: absolute; top: 60px; left: 215px" process="@this" />
+                            <p:commandButton value="#{msg['no']}" onclick="confirmarGuardar.hide();"  actionListener="#{controlReportesBancos.cancelarModificaciones()}" style="position: absolute; top: 60px; left: 255px" process="@this" />
                             <p:commandButton value="#{msg['cancelar']}" onclick="confirmarGuardar.hide();" style="position: absolute; top: 60px; left: 300px" process="@this" />
                         </p:dialog>
 
@@ -52,7 +60,7 @@
 
                             </p:dataTable>
 
-                            <p:commandButton style="position: absolute; left: 10px; top: 231px; " id="GENERARREPORTE" value="#{msg['generar']}"   process="@this" actionListener="#{controlReportesBancos.generarReporte()}" ajax="false"/>
+                            <p:commandButton style="position: absolute; left: 10px; top: 231px; " id="GENERARREPORTE" value="#{msg['generar']}"   process="@this" actionListener="#{controlReportesBancos.generarReporte()}" />
                             <p:tooltip style="font-size: 12px" for="GENERARREPORTE" value="Generar Reporte." />
 
                         </fieldset>
@@ -361,7 +369,7 @@
                     <fieldset id="parametrosInforme" style="position: absolute; left: 10px; top: 65px; width: 840px; height: 140px; border-radius: 10px; ">
                         <legend style="color: blue;text-align:left"><strong>#{msg['parametros']}</strong></legend>
 
-                        <h:outputText value="#{msg['fechadesde']}" style="position: absolute; top: 20px; left: 30px;"/>
+                        <h:outputText value="#{msg['fechadesde']}:" style="position: absolute; top: 20px; left: 30px;"/>
                         <div id="posicionFechaDesdeParametro" style="position: absolute; top: 13px; left: 120px;">
                             <lnk:calendar value="#{controlReportesBancos.parametroDeInforme.fechadesde}" id="fechaDesdeParametroL" color="#{controlReportesBancos.color}" decoration="#{controlReportesBancos.decoracion}"  width="70">
                                 <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(1)}" process="@this"/>
@@ -370,28 +378,28 @@
                             </lnk:calendar> 
                         </div>
 
-                        <h:outputText value="#{msg['empleadodesde']}" style="position: absolute; top: 45px; left: 30px;"/>
+                        <h:outputText value="#{msg['empleadodesde']}:" style="position: absolute; top: 45px; left: 30px;"/>
                         <p:inputText value="#{controlReportesBancos.parametroDeInforme.codigoempleadodesde}" id="empleadoDesdeParametro" style="position: absolute; top: 40px; left: 120px;height: 15px;width: 90px;" onclick="select();">
                             <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(2)}" process="@this"/> 
                             <p:ajax event="change" listener="#{controlReportesBancos.modificarParametroInforme()}" update="empleadoDesdeParametro" process="@this"/>
                             <p:ajax event="dblclick" listener="#{controlReportesBancos.listasValores(2)}" process="@this"/>
                         </p:inputText>
 
-                        <h:outputText value="#{msg['empresa']}" style="position: absolute; top: 70px; left: 30px;text-align: center;"/>
+                        <h:outputText value="#{msg['empresa']}:" style="position: absolute; top: 70px; left: 30px;text-align: center;"/>
                         <p:inputText value="#{controlReportesBancos.parametroDeInforme.empresa.nombre}" id="empresaParametro" style="position: absolute; top: 65px; left: 120px;;height: 15px;width: 90px;" onclick="select();">
                             <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(3)}" process="@this"/> 
                             <p:ajax event="change" listener="#{controlReportesBancos.autocompletarGeneral('EMPRESA', controlReportesBancos.parametroDeInforme.empresa.nombre)}" update="empresaParametro" process="@this"/>
                             <p:ajax event="dblclick" listener="#{controlReportesBancos.listasValores(3)}" process="@this"/>
                         </p:inputText>
 
-                        <h:outputText value="#{msg['proceso']}" style="position: absolute; top: 95px; left: 30px;"/>
+                        <h:outputText value="#{msg['proceso']}:" style="position: absolute; top: 95px; left: 30px;"/>
                         <p:inputText value="#{controlReportesBancos.parametroDeInforme.proceso.descripcion}" id="procesoParametro" style="position: absolute; top: 90px; left: 120px;height: 15px;width: 90px;" onclick="select();">
                             <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(4)}" process="@this"/> 
                             <p:ajax event="change" listener="#{controlReportesBancos.autocompletarGeneral('PROCESO', controlReportesBancos.parametroDeInforme.proceso.descripcion)}" update="procesoParametro" process="@this"/>
                             <p:ajax event="dblclick" listener="#{controlReportesBancos.listasValores(4)}" process="@this"/>
                         </p:inputText>
 
-                        <h:outputText value="#{msg['tipocuenta']}" style="position: absolute; top: 120px; left: 30px;"/>
+                        <h:outputText value="#{msg['tipocuenta']}:" style="position: absolute; top: 120px; left: 30px;"/>
                         <p:selectOneMenu value="#{controlReportesBancos.parametroDeInforme.tipopersonal}" id="tipoCuentaParametro" style="position: absolute; top: 113px; left: 120px;width: 132px;width: 100px;text-transform: uppercase">  
                             <f:selectItem itemLabel="#{msg['ahorros']}" itemValue="AHORROS" />  
                             <f:selectItem itemLabel="#{msg['corriente']}" itemValue="CORRIENTE" />  
@@ -401,7 +409,7 @@
 
                         <p:separator id="separator"  style="vertical-align: central;position: absolute;height: 130px;width: 1px;top: 5px;left: 260px "/>  
 
-                        <h:outputText value="#{msg['hasta']}" style="position: absolute; top: 20px; left: 300px;"/>
+                        <h:outputText value="#{msg['hasta']}:" style="position: absolute; top: 20px; left: 300px;"/>
                         <div id="posicionFechaHastaParametro" style="position: absolute; top: 13px; left: 390px;">
                             <lnk:calendar value="#{controlReportesBancos.parametroDeInforme.fechahasta}" id="fechaHastaParametroL" color="#{controlReportesBancos.color2}" decoration="#{controlReportesBancos.decoracion2}"  width="70">
                                 <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(5)}" process="@this"/> 
@@ -410,35 +418,35 @@
                             </lnk:calendar> 
                         </div>
 
-                        <h:outputText value="#{msg['hasta']}" style="position: absolute; top: 45px; left: 300px;"/>
+                        <h:outputText value="#{msg['hasta']}:" style="position: absolute; top: 45px; left: 300px;"/>
                         <p:inputText value="#{controlReportesBancos.parametroDeInforme.codigoempleadohasta}" id="empleadoHastaParametro" style="position: absolute; top: 40px; left: 390px;height: 15px;width: 90px;" onclick="select();">
                             <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(6)}" process="@this"/> 
                             <p:ajax event="change" listener="#{controlReportesBancos.modificarParametroInforme()}" process="@this"/>
                             <p:ajax event="dblclick" listener="#{controlReportesBancos.listasValores(6)}" process="@this"/>
                         </p:inputText>
 
-                        <h:outputText value="#{msg['numerocuenta']}" style="position: absolute; top: 70px; left: 300px;"/>
+                        <h:outputText value="#{msg['numerocuenta']}:" style="position: absolute; top: 70px; left: 300px;"/>
                         <p:inputText value="#{controlReportesBancos.parametroDeInforme.numerocuentacredi}" id="numeroCuentaParametro" style="position: absolute; top: 65px; left: 390px;height: 15px;width: 180px;" onclick="select();">
                             <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(7)}" process="@this"/> 
                             <p:ajax event="change" listener="#{controlReportesBancos.autocompletarGeneral('ESTRUCTURA', controlReportesBancos.parametroDeInforme.localizacion.nombre)}" update="numeroCuentaParametro" process="@this"/>
                             <p:ajax event="dblclick" listener="#{controlReportesBancos.listasValores(7)}" process="@this"/>
                         </p:inputText>
 
-                        <h:outputText value="#{msg['banco']}" style="position: absolute; top: 95px; left: 300px;"/>
+                        <h:outputText value="#{msg['banco']}:" style="position: absolute; top: 95px; left: 300px;"/>
                         <p:inputText value="#{controlReportesBancos.parametroDeInforme.banco.nombre}" id="bancoParametro" style="position: absolute; top: 90px; left: 390px;height: 15px;width: 180px;" onclick="select();">
                             <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(8)}" process="@this"/> 
                             <p:ajax event="change" listener="#{controlReportesBancos.autocompletarGeneral('BANCO', controlReportesBancos.parametroDeInforme.banco.nombre)}" update="bancoParametro" process="@this"/>
                             <p:ajax event="dblclick" listener="#{controlReportesBancos.listasValores(8)}" process="@this"/>
                         </p:inputText>
 
-                        <h:outputText value="#{msg['tipotrabajador']}" style="position: absolute; top: 120px; left: 300px;"/>
+                        <h:outputText value="#{msg['tipotrabajador']}:" style="position: absolute; top: 120px; left: 300px;"/>
                         <p:inputText value="#{controlReportesBancos.parametroDeInforme.tipotrabajador.nombre}" id="tipoTrabajadorParametro" style="position: absolute; top: 115px; left: 390px;height: 15px;width: 180px;" onclick="select();">
                             <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(9)}" process="@this"/> 
                             <p:ajax event="change" listener="#{controlReportesBancos.autocompletarGeneral('TIPOTRABAJADOR', controlReportesBancos.parametroDeInforme.tipotrabajador.nombre)}" update="tipoTrabajadorParametro" process="@this"/>
                             <p:ajax event="dblclick" listener="#{controlReportesBancos.listasValores(9)}" process="@this"/>
                         </p:inputText>
 
-                        <h:outputText value="#{msg['fechacorte']}" style="position: absolute; top: 20px; left: 610px;"/>
+                        <h:outputText value="#{msg['fechacorte']}:" style="position: absolute; top: 20px; left: 610px;"/>
                         <div id="posicionFechaCorteParametro" style="position: absolute; top: 15px; left: 690px;">
                             <lnk:calendar value="#{controlReportesBancos.parametroDeInforme.fechacorte}" id="fechaCorteParametro" width="70">
                                 <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(10)}" process="@this"/> 
@@ -447,7 +455,7 @@
                             </lnk:calendar> 
                         </div>
 
-                        <h:outputText value="#{msg['ciudad']}" style="position: absolute; top: 45px; left: 610px;"/>
+                        <h:outputText value="#{msg['ciudad']}:" style="position: absolute; top: 45px; left: 610px;"/>
                         <p:inputText value="#{controlReportesBancos.parametroDeInforme.ciudad.nombre}" id="ciudadParametro" style="position: absolute; top: 45px; left: 690px;height: 15px;" onclick="select();">
                             <p:ajax event="click" listener="#{controlReportesBancos.posicionCelda(11)}" process="@this"/> 
                             <p:ajax event="change" listener="#{controlReportesBancos.autocompletarGeneral('CIUDAD', controlReportesBancos.parametroDeInforme.ciudad.nombre)}" update="ciudadParametro" process="@this"/>
